--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-player": "^2.14.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "saas": "^1.0.0",
